[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/space.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/tile_side.gd" type="Script" id=2]
[ext_resource path="res://assets/tiles/outline.png" type="Texture" id=3]

[node name="tile_side" type="YSort"]
script = ExtResource( 2 )
side_id = 0

[node name="space0" parent="." instance=ExtResource( 1 )]

[node name="space1" parent="." instance=ExtResource( 1 )]
position = Vector2( -195, -337.75 )
space_in_tile_id = 1

[node name="space2" parent="." instance=ExtResource( 1 )]
position = Vector2( -390, 0 )
space_in_tile_id = 2

[node name="space3" parent="." instance=ExtResource( 1 )]
position = Vector2( -195, 337.75 )
space_in_tile_id = 3

[node name="space4" parent="." instance=ExtResource( 1 )]
position = Vector2( 195, 337.75 )
space_in_tile_id = 4

[node name="space5" parent="." instance=ExtResource( 1 )]
position = Vector2( 390, 0 )
space_in_tile_id = 5

[node name="space6" parent="." instance=ExtResource( 1 )]
position = Vector2( 195, -337.75 )
space_in_tile_id = 6

[node name="space7" parent="." instance=ExtResource( 1 )]
position = Vector2( 3.05176e-05, -675.5 )
space_in_tile_id = 7

[node name="space8" parent="." instance=ExtResource( 1 )]
position = Vector2( -390, -675.5 )
space_in_tile_id = 8

[node name="space9" parent="." instance=ExtResource( 1 )]
position = Vector2( -195, -1013.25 )
space_in_tile_id = 9

[node name="outline" type="Sprite" parent="."]
visible = false
position = Vector2( -1.07568, -338.212 )
scale = Vector2( 2.21628, 2.22242 )
z_index = 1
texture = ExtResource( 3 )
